feat: Kesfet mekanizmasi eklendi
